syntax = "proto3";

option java_multiple_files = true;

package org.hypertrace.alert.engine.eventcondition.config.service.v1;

import "org/hypertrace/alert/engine/eventcondition/config/service/v1/metric_anomaly_event_condition.proto";

// NOTE : this will be used with config service for CRUD (EventConditionConfigService)
message NewEventCondition {
  oneof condition {
    MetricAnomalyEventCondition metric_anomaly_event_condition = 1;
  }
}

message EventCondition {
  string id = 1;
  oneof condition {
    MetricAnomalyEventCondition metric_anomaly_event_condition = 2;
  }
}
